--- a/Squirrel/Squirrel.Web/Views/Shared/_Header.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Header.cshtml
@@ -1,1 +1,19 @@
-﻿header
+﻿<div class="header">
+    <div class="col-md-6">
+        1
+    </div>
+    <div class="col-md-6 logo-con">
+        <div class="logo">
+            <img src="~/Content/themes/vone/images/Logo.svg" />
+        </div>
+        <div class="sitename">
+            <div class="name">
+                نـام سـایـت
+            </div>
+            <div class="desc">
+                وبلاگ شـخصی
+            </div>
+        </div>
+        <div class="menu-opener glyphbox">&#xe688</div>
+    </div>
+</div>
