--- a/Squirrel/Squirrel.Web/Views/Shared/_Layout.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Styles.Render("~/Content/vone")
     @RenderSection("scripts", required: false)
-
 </head>
 <body>
     @*<div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,7 +36,7 @@
         </div>
     </div>*@
     <div class="container body-container">
-        <div class="row header-container">
+        <div class="header-container">
             @Html.Partial("_Header")
         </div>
         <div class="row main-container">
@@ -46,7 +45,7 @@
             </div>
             @RenderBody()
         </div>
-        <div class="row footer-container">
+        <div class="footer-container">
             @Html.Partial("_Footer")
         </div>
     </div>
