--- a/Squirrel/Squirrel.Web/Views/Shared/_Footer.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Footer.cshtml
@@ -1,12 +1,12 @@
 ﻿@using Squirrel.Utility.FarsiTools
 <div class="footer">
-    <div class="col-xs-6 copyright">
+    <div class="col-sm-6 copyright">
         © سایت
         <span class="important">سنجاب</span>
         -
         @(((PersianDate)DateTime.Now).Year.FaDigit())
     </div>
-    <div class="col-xs-6 poweredby">
+    <div class="col-sm-6 poweredby">
         ایجاد شده توسط
         <span class="important">بهنام ضیغمی</span>
     </div>
