--- a/Squirrel/Squirrel.Web/Views/Issue/Post.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Issue/Post.cshtml
@@ -9,7 +9,6 @@
             <img src="@Url.Content(Model.HeaderImage.Address)" />
         </div>
     }
-
     <div class="post-box">
         <div class="col-md-2">
             @Html.Partial("Post_Info", Model)
@@ -29,7 +28,7 @@
                     @if (Model.PublishDate.HasValue)
                     {
                         <span class="text">
-                            @(((PersianDate)Model.PublishDate.Value).ToStringDateTime().FaDigit())
+                            @(((PersianDate)Model.PublishDate.Value).ToStringDateTime(PersianDateFormat.DD_MonthName_YYYY, " ").FaDigit())
                         </span>
                     }
                 </div>                @if (Model.Attachments.Any())
@@ -60,5 +59,8 @@
         <div class="add-comment">
             @Html.Partial("Post_AddComment", new CommentAddPublicModel { PostId = Model.Id })
         </div>
+    </div>
+    <div class="post-box" style=" border-radius: 5px;">
+        .
     </div>
 </div>
