--- a/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
@@ -1,17 +1,39 @@
-﻿@grayDark1: #3A424E;
-@grayDark2: #515963;
-@grayDark3: #696F78;
-@grayDark4: #84888F;
-@grayDark5: #A6A9AD;
-@grayLight1: #AEB3BB;
-@grayLight2: #BDC1C7;
-@grayLight3: #CDCFD3;
-@grayLight4: #DBDCDF;
-@grayLight5: #E9E9EA;
-@grayLight6: #F4F4F5;
-@grayLight7: #FFFFFF;
+﻿@grayDark1: #252525;
+@grayDark2: #464646;
+@grayDark3: #636363;
+@grayDark4: #7d7d7d;
+@grayDark5: #898989;
+@grayDark6: #959595;
+@grayLight1: #a1a1a1;
+@grayLight2: #b7b7b7;
+@grayLight3: #CCCCCC;
+@grayLight4: #d7d7d7;
+@grayLight5: #E1E1E1;
+@grayLight6: #EEEEEE;
+@grayLight7: #F5F5F5;
 @white: #fff;
-@primaryColor: #FB7D89;
+
+/*@primaryLightestColor: #FFF1CC;
+@primaryLightColor: #E4D19E;
+@primaryColor: #C6AF73;
+@primaryDarkColor: #AC9251;
+@primaryDarkestColor: #927836;*/
+@primaryLightestColor: #F3E3B6;
+@primaryLightColor: #E4D19E;
+@primaryColor: #D5C088;
+@primaryDarkColor: #C6AF73;
+@primaryDarkestColor: #B9A161;
+@secondary1LightestColor: #C0B7CE;
+@secondary1LightColor: #9C90B1;
+@secondary1Color: #80709C;
+@secondary1DarkColor: #675388;
+@secondary1DarkestColor: #513B75;
+@secondary2LightestColor: #B0BFC5;
+@secondary2LightColor: #859BA5;
+@secondary2Color: #668390;
+@secondary2DarkColor: #4B6F7E;
+@secondary2DarkestColor: #355C6D;
+/*@primaryColor: #FB7D89;
 @primaryLightColor: #FC97A1;
 @primaryLightestColor: #FDB5BC;
 @primaryDarkColor: #F96573;
@@ -25,7 +47,7 @@
 @secondary2LightColor: #86DFD3;
 @secondary2LightestColor: #A9EDE4;
 @secondary2DarkColor: #4CBCAD;
-@secondary2DarkestColor: #36A898;
+@secondary2DarkestColor: #36A898;*/
 @complementColor: #89EA74;
 @complementLightColor: #A1F191;
 @complementLightestColor: #BDF7B1;
