--- a/Squirrel/Squirrel.Web/Views/Shared/_Header.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Header.cshtml
@@ -1,40 +1,26 @@
-﻿<div class="header">
-    <div class="col-sm-6 col-xs-8 logo-con">
-        <div class="logo">
-            <img src="~/Content/themes/vone/images/Logo.svg" />
-        </div>
-        <div class="sitename">
-            <div class="name">
-                نـام سـایت
-            </div>
-            <div class="desc">
-                وبـلاگ شـخصی
-            </div>
-        </div>
-        <div class="menu-opener glyphbox">&#xe688</div>
-        <div class="clearbox"></div>
-    </div>
-    <div class="col-sm-6 hidden-xs search-con">
-        <div class="textpackage with-tail">
-            @Html.TextBox("searchText", null, new { @class = "textbox", @placeholder = "جستجو" })
-            <span class="tail glyphbox activeflat">&#xe618</span>
+﻿<div class="row">
+    <div class ="col-sm-5">
+        <div class="header-logo">
+            <span class="sitename">
+                سنجاب
+            </span>
+            <span class="logo">
+                &#xe600
+            </span>
+            <span class="site-description">
+                وبلاگ شخصی
+            </span>
         </div>
     </div>
-    <div class="col-xs-4 visible-xs search-con">
-        <div class="textpackage with-tail full">
-            @Html.TextBox("searchText", null, new { @class = "textbox", @placeholder = "", id="xsmallsearchbox" })
-            <span class="tail glyphbox activeflat">&#xe618</span>
+    <div class ="col-sm-7">
+        <div class="header-menu">
+            <div class="item glyphbox">&#xe618</div>
+            <div class="item">بازی</div>
+            <div class="item">برنامه نویسی</div>
+            <div class="item">تکنولوژی</div>
+            <div class="item">فیلم</div>
+            <div class="item glyphbox">&#xe648</div>
+            <div class="clearbox"></div>
         </div>
     </div>
 </div>
-
-<script type="text/javascript">
-    $('#xsmallsearchbox').on('focusin', function() {
-        $('.logo-con').hide();
-        $(this).parent().parent().addClass('col-xs-12').removeClass('col-xs-4');
-    });
-    $('#xsmallsearchbox').on('focusout', function() {
-        $('.logo-con').show();
-        $(this).parent().parent().removeClass('col-xs-12').addClass('col-xs-4');
-    });
-</script>
