--- a/Squirrel/Squirrel.Web/Content/themes/vone/fonts.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/fonts.css
@@ -108,3 +108,14 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'SquirrelFont';
+	src:url('fonts/SquirrelFont/fonts/SquirrelFont.eot?gujvhg');
+	src:url('fonts/SquirrelFont/fonts/SquirrelFont.eot?#iefixgujvhg') format('embedded-opentype'),
+		url('fonts/SquirrelFont/fonts/SquirrelFont.woff?gujvhg') format('woff'),
+		url('fonts/SquirrelFont/fonts/SquirrelFont.ttf?gujvhg') format('truetype'),
+		url('fonts/SquirrelFont/fonts/SquirrelFont.svg?gujvhg#SquirrelFont') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
